--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ Assignment 1/restaurantAPI/restaurantAPI.zip
 *.mp4
 Assignment 5/web422-a5/src/environments/environment.prod.ts
 Assignment 5/web422-a5/src/environments/environment.ts
+Assignment6/user-api/user-api/
